# snpseq_metadata

./: .travis.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  validate-unit.sh
.github/workflows/: mirror-develop.yml  mirror-main.yml  run-unit-tests.yml
snpseq_metadata/: exceptions.py  utilities.py
snpseq_metadata/models/: converter.py  custom_json_parser.py  experiment.py  file_models.py  flowcell.py  import_export.py  library.py  metadata_model.py  ngi_to_sra_library_mapping.py  sequencing_run.py  study.py
snpseq_metadata/scripts/: generate_python_models.sh  metadata.py
tests/: conftest.py  poc_experiment.py  poc_parse_flowcell.py  test_experiment_integration.py  test_lims_model.py  test_ngi_model.py  test_runfolder_integration.py  test_utilities.py  validate_test_data.sh  validate_xml_file.py
tests/models/: conftest.py  test_converter.py  test_experiment.py  test_file_models.py  test_flowcell.py  test_ngi_to_sra_library_mapping.py  test_sequencing_run.py
tests/resources/: 210415_A00001_0123_BXYZ321XY.ngi.json  210415_A00001_0123_BXYZ321XY.sra.json  210415_A00001_0123_BXYZ321XY.sra.manifest  210415_A00001_0123_BXYZ321XY.sra.xml  experiment.ngi.json  experiment.sra.json  experiment.sra.manifest  experiment.sra.xml  snpseq_data_XYZ321XY.AB-1234-AB-1234-SampleA-1-NovaSeq.sra.manifest  snpseq_data_XYZ321XY.AB-1234-AB-1234-SampleA-2-NovaSeq.sra.manifest  snpseq_data_XYZ321XY.AB-1234-AB-1234-SampleB-NovaSeq.sra.manifest  snpseq_data_XYZ321XY.AB-1234-SampleA-1.sra.manifest  snpseq_data_XYZ321XY.EF-9012-608.sra.manifest  (+14 more)
(+60 files in other folders)
